--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
   <div>
     <div class="product-grid">
   <div class="item-card">
-    <img src="/img/featured img/featured 1.jpg" alt="LG Air-conditioner">
+    <img src="img/featured img/featured 1.jpg" alt="LG Air-conditioner">
     <h4>LG Air-conditioner</h4>
     <p>&#8373;<span style="color: red;">2,300</span> </p>
     <br>
@@ -552,7 +552,7 @@
   </div>
 
    <div class="item-card">
-    <img src="/img/featured img/featured 2.jpg" alt="Refrigirator">
+    <img src="/img/featured-img/featured-2.jpg" alt="Refrigirator">
     <h4> Double Door Refrigerator</h4>
     <p>&#8373; <span style=" color: red;">5,700</span></p>
      <br>
@@ -866,6 +866,7 @@ function searchProducts() {
 </style>
 
 </html>
+
 
 
 
